# DESCENT-3MASTERED

./: .gitignore  CMakeLists.txt  README.md  frag.spv  vcpkg.json
Descent3/: AIGoal.cpp  AImain.cpp  CMakeLists.txt  Controls.cpp  Game2DLL.cpp  GameCheat.cpp  GameLoop.cpp  LoadLevel.cpp  OsirisLoadandBind.cpp  Player.cpp  SmallViews.cpp  WeaponFire.cpp  args.h  cinematics.cpp  cockpit.cpp  config.cpp  config.h  damage.cpp  dedicated_server.cpp  demofile.cpp  descent.cpp  descent.h  difficulty.cpp  difficulty.h  difficulty_external.h  fireball.cpp  game.cpp  game.h  gameevent.cpp  gamefont.cpp  gamefont.h  gameloop.h  gamesave.cpp  gamesave.h  gamesequence.cpp  gamesequence.h  gametexture.cpp  gametexture.h  gauges.cpp  gauges.h  (+61 more)
bitmap/: bitmain.cpp  iff.h  tga.cpp
dd_sndlib/: llsopenal.cpp
ddio_common/: timer.cpp
ddio_sdl/: sdlfile.cpp  sdlio.cpp  sdljoy.cpp  sdlkey.cpp  sdlmouse.cpp
ddio_win/: winio.cpp  winkey.cpp  winmouse.cpp
docs/: readme.md
hogfiles/: CMakeLists.txt
hogfiles/descent3mastered/: Shield.OOF  SkyHi_Arora.tga  SkyHi_CloudMess05.tga  SkyHi_EXP256.tga  SkyHi_M02Sky.tga  SkyHi_MarsSkyDome.tga  SkyHi_PhobosSky.tga  SkyHi_SolSky4.tga  SkyHi_TitanSky.tga  generic.frag  generic.vert  lightmap.vert  lightmap_room.frag  lightmap_room_fog.frag  lightmap_room_fog.vert  lightmap_room_specular_fog.vert  lightmap_specular.frag  lightmap_specular.vert  terrain_legacy_compute.frag  terrain_legacy_compute.vert  terrain_legacy_compute_fog.frag  terrain_lightmap_fog.frag  unlit_room.frag
hogfiles/piccuengine/: CrazySciFi_512.tga  SkyHi_Arora.tga  SkyHi_CC_Sky.tga  SkyHi_CloudMess05.tga  SkyHi_CloudySky.tga  SkyHi_EXP256.tga  SkyHi_EarthKorea.tga  SkyHi_M02Sky.tga  SkyHi_MSky3.tga  SkyHi_MarsClif9.tga  SkyHi_MarsSkyDome.tga  SkyHi_MilkyWay.tga  SkyHi_Overcast3.tga  SkyHi_PhobosSky.tga  SkyHi_RedAcropolis.tga  SkyHi_SolSky4.tga  SkyHi_TitanSky.tga  SkyHi_VergenceNeb.tga  SkyHi_Volcanic2.tga  fog_portal.frag  fog_portal.vert  generic.frag  generic.vert  lightmap.frag  lightmap_room.frag  lightmap_room.vert  lightmap_room_fog.frag  lightmap_room_specular_fog.frag  lightmap_room_specular_fog.vert  lightmap_specular.frag  lightmap_specular.vert  particle_instance.vert  terrain_legacy_compute.frag  terrain_legacy_compute.vert  terrain_legacy_compute_fog.frag  terrain_lightmap.frag  terrain_lightmap.vert  terrain_lightmap_fog.frag  terrain_lightmap_fog.vert  unlit_room.frag  (+3 more)
lib/: 3d.h  PHYSICS.H  bitmap.h  ddio.h  enginebrand.h  llsopenal.h  mem.h  polymodel.h  psrand.h  renderer.h  uisys.h
lib/sdl/: SDLApp.h  SDLDDIO.h  SDLDatabase.h
lib/win/: fixwin32.h  win32app.h
mem/: mem.cpp
misc/: error.cpp  psrand.cpp
model/: CMakeLists.txt  newstyle.cpp  polymodel.cpp  retained_polymodel.cpp  retained_polymodel.h
movie/: d3movie.cpp
mve/: libmve.h  mve_audio.cpp  mvelib.cpp  mveplay.cpp
netcon/includes/: mdllinit.h
netgames/: CMakeLists.txt
netgames/dmfc/: CMakeLists.txt  dmfcremote.cpp  dmfcvirtual.cpp
netgames/hoard/: hoard.cpp
netgames/includes/: DMFC.h
osiris_bridge/: CMakeLists.txt  README.md  host.cpp  pipe.h  protocol.h  test_level.cpp
osiris_bridge/test_mission/: bridge_test.msn
physics/: physics.cpp
renderer/: CMakeLists.txt  HardwareInternal.h  IRenderer.h  clipper.cpp  draw.cpp  gl1_draw.cpp  gl1_image.cpp  gl1_init.cpp  gl1_local.h  gl1_main.cpp  gl_ao.cpp  gl_draw.cpp  gl_framebuffer.cpp  gl_gtao.cpp  gl_hbao.cpp  gl_image.cpp  gl_init.cpp  gl_local.h  gl_main.cpp  gl_mesh.cpp  gl_mesh.h  gl_shader.cpp  gl_shadersource.cpp  gl_shared.h  points.cpp  renderer.cpp
renderer/core/: CONTRACT_NOTES.md  render_capabilities.h  render_capture.cpp  render_capture.h  render_contract.cpp  render_contract.h  render_coordinate_contract.cpp  render_coordinate_contract.h  render_device_contract.cpp  render_device_contract.h  render_graph_contract.cpp  render_graph_contract.h  render_lifetime_contract.h  render_state_contract.cpp  render_state_contract.h  render_trace_contract.h  render_verification_contract.cpp  render_verification_contract.h  render_wsi_contract.h  retained_world.h
renderer/ref/: Direct3D.cpp  opengl.cpp
renderer/tests/: CORPUS_SCHEDULES.md  render_contract_tests.cpp  verify_corpus_assets.cmake
renderer/vulkan/: vk_common.h  vk_compiler.cpp  vk_compiler.h  vk_frame.cpp  vk_frame.h  vk_frame_plan.cpp  vk_frame_plan.h  vk_pipelines.cpp  vk_pipelines.h  vk_platform.cpp  vk_platform.h  vk_renderer.cpp  vk_renderer.h  vk_renderer_runtime.h  vk_resources.cpp  vk_resources.h  vk_retained_world.cpp  vk_retained_world.h  vk_runtime.cpp  vk_runtime.h  vk_state_tracker.cpp  vk_state_tracker.h  vk_targets.cpp  vk_targets.h  vk_textures.cpp  vk_textures.h  vk_wsi.cpp  vk_wsi.h
renderer/vulkan/shaders/: alpha_clear.frag  bloom_composite.frag  bloom_down.frag  bloom_threshold.frag  bloom_up.frag  capture_color.frag  capture_color_ms.frag  capture_ssaa_2_to_1.frag  capture_ssaa_4_to_2.frag  cockpit_bloom_gamma.frag  cockpit_over.frag  compile_shaders.cmake  depth_map.frag  depth_map_ms.frag  font.frag  font.vert  fullscreen.vert  gtao_apply.frag  gtao_blur.frag  gtao_deferred.frag  gtao_depth.frag  gtao_raw.frag  gtao_suppress.frag  gtao_temporal.frag  line.vert  motion_blur.frag  motion_copy.frag  motion_debug.frag  particle.frag  particle.vert  point.frag  point.vert  post_blit.frag  post_math.glsl  post_uniforms.glsl  present.frag  reflection_manifest.tsv  resolve_depth_ms.frag  resolve_float_ms.frag  resolve_uint_ms.frag  (+10 more)
renderer/vulkan/shaders/shared/: terrain_emitter.glsl  world_abi.glsl
scripts/: AIGame3.cpp  CMakeLists.txt  MS-GAME-X64.DEF  MS-LVL-X64.DEF
scripts/data/linuxfullhog/: D3.STR  d3i.str
sdl/: CMakeLists.txt  sdlapp.cpp  sdlcontroller.cpp  sdldatabase.cpp
tools/: package_release.ps1  release_readme.md  subdivide_oof.py
tools/hogdir/: hogdir.cpp
ui/: UISystem.cpp
win32/: CMakeLists.txt  win32res.h  win32res.rc  winapp.cpp  wincon.cpp  wincon_sdl.cpp  wincontroller.cpp  windata.cpp  windebug.cpp
